fixed overlapping buttons

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 * {
     margin: 0;
+    
 }
 
 img {
@@ -24,6 +25,7 @@ main {
 
 section {
     padding: 0px 15px 0px 15px;
+    max-width: 1200px;
 }
 
 /**********************/
@@ -32,22 +34,29 @@ section {
 
 h1 {
     font-size: 3rem;
-    text-align: center;
+    text-align: left;
+    color: var(--color-black);
+    text-transform: uppercase;
 }
 
 h2 {
     font-size: 2rem;
     text-align: center;
+    color: var(--color-black);
+    text-transform: uppercase;
 }
 
 h3 {
     font-size: 1.5rem;
     text-align: center;
+    color: var(--color-black);
+    text-transform: uppercase;
 }
 
 p {
     font-size: 1rem;
     margin: 2px;
+    color: var(--color-black);
 }
 ul {
     display: flex;
@@ -67,6 +76,7 @@ button {
     width: 50vw;
     padding: 10px;
     font-size: 2rem;
+    text-transform: uppercase;
     color: var(--color-white);
 }
 button:hover {
@@ -81,6 +91,7 @@ header {
     background-color:  var(--color-sand);
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .logo {
@@ -114,6 +125,7 @@ header nav {
     background-color: var(--color-sand);
     font-size: 2rem;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .menuItems li {
@@ -123,7 +135,6 @@ header nav {
 .menuItems li:nth-child(1) {
     padding-top: 70px;
 }
-
 
 /**********************/
 /* footer */
@@ -156,10 +167,13 @@ footer {
 
 .splash {
     position: relative;
+}
+splash img {
+    position: absolute;
     z-index: -1;
 }
 
-.splash button {
+.splash a {
     position: absolute;
     bottom: 20px;
     left: 20px;
@@ -175,7 +189,19 @@ footer {
 /**********************/
 
 .menuArrow {
-    width: 8vw;
+    width: 7vw;
+}
+
+.gridView {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.drawingsHeader {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding-top: 15px;
 }
 
 /**********************/
@@ -186,8 +212,22 @@ footer {
     border: 1px solid var(--color-black);
     padding: 10px;
 }
+
+.contactDetail {
+    display: flex;
+    align-items: center;
+}
+
+.contactDetail p {
+    width: 100%;
+    padding-left: 10px;
+    text-align: left;
+    font-size: 1.3rem;
+}
+
 form {
-    width: 80vw;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 form input {
@@ -199,6 +239,21 @@ form textarea {
     background-color: var(--color-sand);
     width: 100%;
     word-break: break-word;
+}
+
+.formBottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.submitForm {
+    width: 50%;
+    height: 9vh;
+    padding: 10px;
+    font-size: 2rem;
+    background-color: var(--color-black);
+    color: var(--color-white);
 }
 
 /**********************/
@@ -213,14 +268,46 @@ form textarea {
 
 
 @media only screen and (min-width: 800px) {
+    
+    /**********************/
+    /* Header */
+    /**********************/  
+    header {
+        position: static;
+    }  
+    header nav {
+        max-width: 1200px;
+    }
+    
+    .logo {
+        width: 15vw;
+        padding: 5px 10px 0px 10px;
+    }
     .burgerMenu {
         display: none;
     }
     .menuItems {
         display: flex;
         flex-direction: row;
-        position: relative;
+        position:relative;
+        height: inherit;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 0px 30px 0px 0px;
+        font-size: 1.5rem;
     }
+    .menuItems li {
+        padding-right: 25px;
+    }
+    .menuItems li:nth-child(1) {
+        padding-top: 6px;
+    }
+
+
+    
+    
+
+
 }
 
 
